added TailoringController tests