@@ -274,9 +274,38 @@ class ScreeningSheetServiceImplTest {
     }
 
     @Test
-    void createScreeningSheet_ScreeninSheetParameterProjectWithoutLabel_TailoringexpertExceptionThrown() throws Exception{
+    void createScreeningSheet_ScreeningSheetParameterProjectNullLabel_TailoringexpertExceptionThrown() throws Exception {
         // arrange
-        given(screeningDataProviderMock.parse(any())).willReturn(Collections.emptyList());
+        given(screeningDataProviderMock.parse(any())).willReturn(
+            List.of(
+                ScreeningSheetParameterField.builder()
+                    .category("Project")
+                    .name(ScreeningSheet.PROJECT)
+                    .label(null)
+                    .build()
+            )
+        );
+
+        // act
+        Throwable actual = catchThrowable(() -> service.createScreeningSheet(new byte[0]));
+
+        // assert
+        assertThat(actual).isInstanceOf(TailoringexpertException.class);
+        verify(repositoryMock, times(0)).getParameter(anyCollection());
+    }
+
+    @Test
+    void createScreeningSheet_ScreeningSheetParameterProjectEmptyLabel_TailoringexpertExceptionThrown() throws Exception {
+        // arrange
+        given(screeningDataProviderMock.parse(any())).willReturn(
+            List.of(
+                ScreeningSheetParameterField.builder()
+                    .category("Project")
+                    .name(ScreeningSheet.PROJECT)
+                    .label("")
+                    .build()
+            )
+        );
 
         // act
         Throwable actual = catchThrowable(() -> service.createScreeningSheet(new byte[0]));
